full split, working on proper into .text inserting

--- a/zad1/Makefile
+++ b/zad1/Makefile
@@ -1,11 +1,12 @@
 CXX := g++
 CXXFLAGS := -O2 -fno-common -no-pie -fno-pie
 TARGET := solution
+LIBS := SectionEditor.cpp Utils.cpp
 
 all: solution
 
 solution:
-	$(CXX) $(CXXFLAGS) $(TARGET).cpp -o $(TARGET)
+	$(CXX) $(CXXFLAGS) $(LIBS) $(TARGET).cpp -o $(TARGET)
 
 clean:
 	rm -f $(TARGET) 
